[build-system]
requires = [
  "setuptools >=57.4",
  "wheel >=0.37"
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = [
    "--cov=branch_border",
    "--cov=gomori",
    "--cov=dag_longest_path",
    "--cov=ford_fulkerson",
    "--cov=khun",
]

testpaths = [
    "tests",
]

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_no_return = true
warn_unreachable = true
warn_unused_configs = true
verbosity = 1
