[metadata]
name = saio
description = saio labs
author = Tim
license = MIT
license_file = LICENSE
platforms = unix, osx, linux
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    lab1
install_requiers =
    scipy>=1.9
python_requires = >=3.8
package_dir =
    =src
zip_safe = False
include_package_data = True

[options.extras_require]
testing =
    black >=21.0
    flake8 >=3.9
    mypy >=0.910
    pytest-cov >=2.12
    tox >=3.24

[flake8]
max-line-length = 160
